--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.pupu</groupId>
     <artifactId>kafka-demo01</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>lp01-kafka-api</module>
+    </modules>
 
 
 </project>
